<?xml version="1.0" encoding="utf-8"?>
<!--TODO: Not nice rows situated. Must be more direct.-->
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context="com.local.doctor.jkh_lighter.Main2Activity">

    <TableLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/energy"
                  android:id="@+id/textView11" android:gravity="center" android:layout_marginTop="10dp"
                  android:layout_marginBottom="10dp"/>
        <TableRow android:layout_width="fill_parent" android:layout_height="match_parent" android:gravity="center"
        >
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/t1"
                      android:id="@+id/textView13"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/delimiter"
                    android:id="@+id/textView27"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/t1ready"
                    android:id="@+id/textViewT1" android:layout_column="2"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/t2"
                      android:id="@+id/textView15" android:layout_gravity="bottom"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/delimiter"
                      android:id="@+id/textView28"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/t2ready"
                    android:id="@+id/textViewT2" android:layout_column="2"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/t3"
                      android:id="@+id/textView17" android:layout_gravity="bottom"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/delimiter"
                      android:id="@+id/textView29"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/t3ready"
                    android:id="@+id/textViewT3" android:layout_column="2"/>
        </TableRow>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/water"
                  android:id="@+id/textView19" android:gravity="center" android:layout_marginTop="10dp"
                  android:layout_marginBottom="10dp"/>
        <TableLayout android:layout_width="match_parent" android:layout_height="match_parent">
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                      android:gravity="center">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/cold"
                          android:id="@+id/textView20" android:layout_gravity="bottom"
                />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/delimiter"
                          android:id="@+id/textView30"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/cold_ready"
                        android:id="@+id/textViewCold" android:layout_column="2"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                      android:gravity="center">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/hot"
                          android:id="@+id/textView21"
                          android:layout_gravity="bottom" android:gravity="center"/>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/delimiter"
                          android:id="@+id/textView31"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/hot_ready"
                        android:id="@+id/textViewHot" android:layout_column="2"/>
            </TableRow>
        </TableLayout>
    </TableLayout>
    <TableRow android:layout_width="match_parent" android:layout_height="96dp" android:weightSum="1"
              android:layout_alignParentBottom="true" android:layout_alignParentStart="true"
              android:id="@+id/tableRow">
        <FrameLayout android:layout_width="wrap_content" android:layout_height="match_parent"
                     android:layout_weight="0.51">
            <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/send" android:layout_gravity="center"
                    android:minWidth="100dp" android:id="@+id/btnSend"/>
        </FrameLayout>
        <FrameLayout android:layout_width="wrap_content" android:layout_height="match_parent"
                     android:layout_weight="0.51" android:layout_gravity="center">
            <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/cancel" android:id="@+id/btnCancel" android:layout_gravity="center"
                    android:minWidth="100dp"/>
        </FrameLayout>
    </TableRow>
</RelativeLayout>
